# hybrid_robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
climb3/: CMakeLists.txt  package.xml
climb3/src/: 6DOF.cpp  keyboard.cpp  main.cpp  process_trajectory.cpp
climb3_control/: CMakeLists.txt  package.xml
climb3_control/src/: main.cpp
hybrid_robot/src/: after_process_trajectory.cpp  coordinate_transform.cpp  transform.cpp
include/targetPlane/: target_plane.h
irobot_navigation/: CMakeLists.txt  package.xml
irobot_navigation/launch/: amcl.launch  group.launch  imu_odom.launch  irobot_mapping.launch  irobot_nav.launch  map.launch  urg_node_180.launch
launch/: targetPose.launch
src/: climbing_robot_project.cpp  pcd_filter.cpp  process_trajectory.cpp  savefile.cpp  target_plane.cpp  target_pose.cpp
worm_robot_description/urdf/: wormRobot.srdf  wormRobot.xacro  worm_robot_detail.xacro  wr_links_joints.xacro  wr_parameters.xacro
wr_gazebo/: CMakeLists.txt  package.xml
wr_gazebo/worlds/: wr_robot.world
